--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Редактировать данные</h2>
 
 <%= form_for(resource, as: resource_name, url: user_registration_path(), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
